# FIFA21-Players

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Trabalho - Consultas.ipynb
app/: package.json  tsconfig.json
app/public/: index.html
app/src/: app.tsx  index.tsx  styles.scss
app/src/@types/: bindings.types.ts  devices.types.ts  player.types.ts  routes.types.ts  userRating.types.ts
app/src/components/BaseTable/: index.tsx  styles.ts
app/src/components/NavBar/: index.tsx  styles.scss  styles.ts
app/src/components/SearchBar/: index.tsx  styles.ts
app/src/components/TablePlayers/: index.tsx  styles.ts
app/src/components/TableUserRatings/: index.tsx  styles.ts
app/src/components/TagSearch/: index.tsx  styles.ts
app/src/components/Test/: index.tsx
app/src/components/WrapView/: index.tsx  styles.ts
app/src/styles/: GlobalStyles.ts  themes.ts
app/src/utils/: isInteger.ts
app/src/views/About/: index.tsx
cmake/: App.cmake  icon.icns
data/: players_21.csv
src/: main.cpp
src/Database/: database.cpp  database.h  searchStructs.h
src/HashTable/: CMakeLists.txt  hashTable.cpp  hashTable.h  hashTableIterator.h
src/Misc/: fastConversions.h  misc.cpp  misc.h  sort.h
src/Players/: players.h
src/RBTree/: rbTree.h
src/SearchStructs/: basePlayerSearch.h  index.h  playerSearch.h  positionSearch.h  tagsSearch.h  userSearch.h
src/Structs/: index.h  players.h  position.h  tag.h  user.h
src/Tags/: tags.h
src/Timer/: timer.h
src/TrieTree/: CMakeLists.txt  trieTree.cpp  trieTree.h
src/UI/: ui.cpp  ui.h
src/User/: user.h
(+7 files in other folders)
